[tool.poetry]
name = "servicestore"
version = "0.1.0"
description = ""
authors = ["Vadim <yagofarov.vadim@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
